[package]
name = "socket-bench-server"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra socket bench server"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "0.3.0"  }
parity-multiaddr = "0.7.2"
tokio = { version = "1.8.4", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }

libra-logger = { path = "../../common/logger", version = "0.1.0" }
memsocket = { path = "../memsocket", version = "0.1.0" }
netcore = { path = "../netcore", version = "0.1.0" }
noise = { path = "../noise", version = "0.1.0", features = ["testing"] }
